# vertexwise-triangle-counting

./: .gitignore  CMakeLists.txt  FindClangTidy.cmake  FindOpenCilk.cmake  FindPthreads.cmake  Graph.cpp  Graph.hpp  LICENSE  README.md  coo2csc.c  coo2csc.h  mmio.c  mmio.h  requirements.txt  triangle_v3_cilk.cpp  triangle_v3_openmp.cpp  triangle_v3_serial.cpp  triangle_v4_cilk.cpp  triangle_v4_openmp.cpp  triangle_v4_pthreads.cpp  triangle_v4_serial.cpp
formula-validation/: validate.py
